--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,30 @@
+body, html {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+}
+
+#config-form {
+  position: absolute;
+}
+
+.flex-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item {
+  width: 40px;
+  height: 40px;
+  border: 1px black solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .prime {
-  color: red;
+  color: blue;
 }
