--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 body, html {
-  width: 100vw;
   height: 100vh;
   margin: 0; }
 
@@ -7,7 +6,6 @@ body, html {
   position: absolute; }
 
 .flex-container {
-  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -16,10 +14,23 @@ body, html {
 .item {
   width: 40px;
   height: 40px;
-  border: 1px black solid;
+  background: #f1f1f1;
+  margin: 2px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  -webkit-transition: background .3s;
+  -moz-transition: background .3s;
+  -ms-transition: background .3s;
+  -o-transition: background .3s;
+  transition: background .3s;
   display: flex;
   align-items: center;
   justify-content: center; }
+  .item:hover {
+    background: #e2e2e2; }
 
 .prime {
   color: blue; }
