Primes to green

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,6 @@ body, html {
     background: #e2e2e2; }
 
 .prime {
-  color: blue; }
+  background: green; }
 
 /*# sourceMappingURL=style.css.map */
